<resources>
    <string name="app_name">ToDoList</string>
    <string name="app_heading">TODO List</string>
    <string name="instruction">Enter Activity Name</string>
    <string name="submit_button">Submit</string>
    <string name="student_list">List of Tasks</string>
    <string name="delete">Delete Selected</string>
    <string name="timer">Timer</string>
    <string name="rename_note">NOTE: Click On Task in List to Rename</string>
</resources>