<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/infoFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_heading"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/studentInfoFrame"
            android:layout_width="390dp"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inputInstruction"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:text="@string/instruction1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/enterName"
                android:hint="@string/instruction"
                android:inputType="text"
                android:autofillHints="name"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listName"
                android:layout_width="262dp"
                android:layout_height="match_parent"
                android:text="@string/student_list"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/delete"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/listFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/studentsList"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>